--- a/estilos.css
+++ b/estilos.css
@@ -1,24 +1,44 @@
-<!DOCTYPE html>
-<!-- saved from url=(0058)https://github.com/omar1506/BUSCAR-PRODUCTOS/tree/main/css -->
-<html lang="en" data-color-mode="auto" data-light-theme="light" data-dark-theme="dark" data-a11y-animated-images="system" data-a11y-link-underlines="true" data-turbo-loaded=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css">.turbo-progress-bar {
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  height: 3px;
-  background: #0076ff;
-  z-index: 2147483647;
-  transition:
-    width 300ms ease-out,
-    opacity 150ms 150ms ease-in;
-  transform: translate3d(0, 0, 0);
+body {
+  font-family: Arial, sans-serif;
 }
-</style><style>
-:root {
-  --fontStack-monospace: "Monaspace Neon", ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
-}
-</style>
 
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 1em;
+  text-align: center;
+}
+
+#buscar {
+  width: 50%;
+  height: 2em;
+  padding: 0.5em;
+  font-size: 1.2em;
+}
+
+#buscar-btn {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 0.5em 1em;
+  font-size: 1.2em;
+  cursor: pointer;
+}
+
+#resultados {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#resultados th, #resultados td {
+  border: 1px solid #ddd;
+  padding: 0.5em;
+  text-align: left;
+}
+
+#resultados th {
+  background-color: #f0f0f0;
+}
 
 
   
